Fix whitespace

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -133,6 +133,7 @@ code {
     font-size: 1rem;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
+    text-transform: uppercase;
     // background-color: #eef;
 }
 
