--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -208,7 +208,10 @@ hr.rainbow-line
   transition: all 200ms ease 0s
 
 .whitespace
-  padding: 5em
+  padding: 3em
+
+.whitespace-xs
+  padding: 1em
 
 
 /*images*/
